--- a/vetcms/src/vetcms.WebApi/vetcms.WebApi.csproj
+++ b/vetcms/src/vetcms.WebApi/vetcms.WebApi.csproj
@@ -25,4 +25,12 @@
     <ProjectReference Include="..\vetcms.ServerApplication\vetcms.ServerApplication.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
