proper validation error messages email fixes

--- a/vetcms/src/vetcms.WebApi/template.appsettings.json
+++ b/vetcms/src/vetcms.WebApi/template.appsettings.json
@@ -24,8 +24,8 @@
     "Email": "su@su.su",
     "Password": "32154"
   },
-  "Host" : {
-      "ApiBase" : "https://localhost:5042"
+  "Host": {
+    "ApiBase": "http://localhost:5042"
   },
   "AllowedHosts": "*",
   "database_driver": "sqlite"
