implemement create patient type api command model, controller, response and validator

--- a/.gitignore
+++ b/.gitignore
@@ -487,3 +487,4 @@ vetcms/src/vetcms.WebApi/vetcms.db-wal
 vetcms/src/vetcms.WebApi/vetcms.db-shm
 vetcms/src/vetcms.BrowserPresentation/wwwroot/appsettings.json
 vetcms/src/vetcms.WebApi/vetcms.db
+vetcms/src/vetcms.WebApi/vetcms.db
