--- a/vetcms/src/vetcms.ServerApplication/vetcms.ServerApplication.csproj
+++ b/vetcms/src/vetcms.ServerApplication/vetcms.ServerApplication.csproj
@@ -54,4 +54,8 @@
     <ProjectReference Include="..\SharedModels\vetcms.SharedModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\PatientManagement\" />
+  </ItemGroup>
+
 </Project>
