--- a/vetcms/src/vetcms.ServerApplication/vetcms.ServerApplication.csproj
+++ b/vetcms/src/vetcms.ServerApplication/vetcms.ServerApplication.csproj
@@ -9,10 +9,13 @@
   <ItemGroup>
     <Compile Remove="Domain\Abstractions\**" />
     <Compile Remove="Features\AnimalBreed\**" />
+    <Compile Remove="Features\PatientManagement\**" />
     <EmbeddedResource Remove="Domain\Abstractions\**" />
     <EmbeddedResource Remove="Features\AnimalBreed\**" />
+    <EmbeddedResource Remove="Features\PatientManagement\**" />
     <None Remove="Domain\Abstractions\**" />
     <None Remove="Features\AnimalBreed\**" />
+    <None Remove="Features\PatientManagement\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -55,10 +58,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharedModels\vetcms.SharedModels.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\PatientManagement\" />
   </ItemGroup>
 
 </Project>
